01_Argo_Events_-_Conditional_Triggers/playground.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: playground
